#146  Upgraded to Spring Boot 3.4.7
  - Updated Spring Boot from 2.6.11 to 3.4.7
  - Migrated from javax to jakarta namespace
  - Replaced mysql-connector-java with mysql-connector-j
  - Updated Apache Commons Lang to Lang3
  - Added Spring Boot 3 AutoConfiguration.imports file
  - Added @DependsOnDatabaseInitialization annotations for proper initialization order
  - Updated String formatting to use Java's formatted() method
  - Modernized stream operations with Optional::stream
  - Removed deprecated eventuate-local-java-migration module
  - Updated Gradle wrapper to latest version